Update docker-compose to use GitHub image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   image-tool:
-    build: .
+    image: fengyuchen1314/image-tool:latest
     container_name: image-tool
     ports:
       - "30050:30050"
